// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover can close from content (uncontrolled) 1`] = `
<ContextProvider
  value={
    Object {
      "headerComponent": "h6",
    }
  }
>
  <Popper
    appendTo={[Function]}
    distance={25}
    enableFlip={true}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    isVisible={false}
    onDocumentClick={[Function]}
    onDocumentKeyDown={[Function]}
    onTriggerClick={[Function]}
    placement="top"
    popper={
      <FocusTrap
        active={false}
        aria-describedby="popover-test-body"
        aria-labelledby="popover-test-header"
        aria-modal="true"
        className="pf-c-popover"
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
            "fallbackFocus": [Function],
            "returnFocusOnDeactivate": true,
          }
        }
        onMouseDown={[Function]}
        paused={false}
        preventScrollOnDeactivate={true}
        role="dialog"
        style={
          Object {
            "maxWidth": null,
            "minWidth": null,
            "opacity": 0,
            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
          }
        }
      >
        <PopoverArrow />
        <PopoverContent>
          <PopoverCloseButton
            aria-label="Close"
            onClose={[Function]}
          />
          <PopoverHeader
            alertSeverityScreenReaderText="undefined alert:"
            icon={null}
            id="popover-test-header"
            titleHeadingLevel="h6"
          >
            <div>
              Popover header
            </div>
          </PopoverHeader>
          <PopoverBody
            id="popover-test-body"
          >
            <div>
              <div>
                All the content props (headerContent, bodyContent, footerContent) can take a function which the Popover component passes the hide function to which can be used to close the Popover after some user interaction.
              </div>
              <div>
                <button
                  id="uncontrolled-close"
                  onClick={[Function]}
                >
                  Close popover
                </button>
              </div>
            </div>
          </PopoverBody>
          <PopoverFooter
            id="popover-test-footer"
          >
            Popover footer
          </PopoverFooter>
        </PopoverContent>
      </FocusTrap>
    }
    popperMatchesTriggerWidth={false}
    positionModifiers={
      Object {
        "bottom": "pf-m-bottom",
        "bottom-end": "pf-m-bottom-right",
        "bottom-start": "pf-m-bottom-left",
        "left": "pf-m-left",
        "left-end": "pf-m-left-bottom",
        "left-start": "pf-m-left-top",
        "right": "pf-m-right",
        "right-end": "pf-m-right-bottom",
        "right-start": "pf-m-right-top",
        "top": "pf-m-top",
        "top-end": "pf-m-top-right",
        "top-start": "pf-m-top-left",
      }
    }
    trigger={
      <button
        id="uncontrolled-toggle"
      >
        Toggle Popover
      </button>
    }
    zIndex={9999}
  />
</ContextProvider>
`;

exports[`popover can have a custom minimum width 1`] = `
<ContextProvider
  value={
    Object {
      "headerComponent": "h6",
    }
  }
>
  <Popper
    appendTo={[Function]}
    distance={25}
    enableFlip={true}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    isVisible={false}
    onDocumentClick={[Function]}
    onDocumentKeyDown={[Function]}
    onTriggerClick={[Function]}
    placement="top"
    popper={
      <FocusTrap
        active={false}
        aria-describedby="popover-test-body"
        aria-labelledby="popover-test-header"
        aria-modal="true"
        className="pf-c-popover"
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
            "fallbackFocus": [Function],
            "returnFocusOnDeactivate": true,
          }
        }
        onMouseDown={[Function]}
        paused={false}
        preventScrollOnDeactivate={true}
        role="dialog"
        style={
          Object {
            "maxWidth": null,
            "minWidth": "600px",
            "opacity": 0,
            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
          }
        }
      >
        <PopoverArrow />
        <PopoverContent>
          <PopoverCloseButton
            aria-label="Close"
            onClose={[Function]}
          />
          <PopoverHeader
            alertSeverityScreenReaderText="undefined alert:"
            icon={null}
            id="popover-test-header"
            titleHeadingLevel="h6"
          >
            <div>
              Popover Header
            </div>
          </PopoverHeader>
          <PopoverBody
            id="popover-test-body"
          >
            <div>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id feugiat augue, nec fringilla turpis.
            </div>
          </PopoverBody>
        </PopoverContent>
      </FocusTrap>
    }
    popperMatchesTriggerWidth={false}
    positionModifiers={
      Object {
        "bottom": "pf-m-bottom",
        "bottom-end": "pf-m-bottom-right",
        "bottom-start": "pf-m-bottom-left",
        "left": "pf-m-left",
        "left-end": "pf-m-left-bottom",
        "left-start": "pf-m-left-top",
        "right": "pf-m-right",
        "right-end": "pf-m-right-bottom",
        "right-start": "pf-m-right-top",
        "top": "pf-m-top",
        "top-end": "pf-m-top-right",
        "top-start": "pf-m-top-left",
      }
    }
    trigger={
      <div>
        Toggle Popover
      </div>
    }
    zIndex={9999}
  />
</ContextProvider>
`;

exports[`popover can specify position as object value 1`] = `
<ContextProvider
  value={
    Object {
      "headerComponent": "h6",
    }
  }
>
  <Popper
    appendTo={[Function]}
    distance={25}
    enableFlip={true}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    isVisible={false}
    onDocumentClick={[Function]}
    onDocumentKeyDown={[Function]}
    onTriggerClick={[Function]}
    placement="right"
    popper={
      <FocusTrap
        active={false}
        aria-describedby="popover-test-body"
        aria-labelledby="popover-test-header"
        aria-modal="true"
        className="pf-c-popover"
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
            "fallbackFocus": [Function],
            "returnFocusOnDeactivate": true,
          }
        }
        onMouseDown={[Function]}
        paused={false}
        preventScrollOnDeactivate={true}
        role="dialog"
        style={
          Object {
            "maxWidth": null,
            "minWidth": null,
            "opacity": 0,
            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
          }
        }
      >
        <PopoverArrow />
        <PopoverContent>
          <PopoverCloseButton
            aria-label="Close"
            onClose={[Function]}
          />
          <PopoverHeader
            alertSeverityScreenReaderText="undefined alert:"
            icon={null}
            id="popover-test-header"
            titleHeadingLevel="h6"
          >
            <div>
              Popover Header
            </div>
          </PopoverHeader>
          <PopoverBody
            id="popover-test-body"
          >
            <div>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id feugiat augue, nec fringilla turpis.
            </div>
          </PopoverBody>
        </PopoverContent>
      </FocusTrap>
    }
    popperMatchesTriggerWidth={false}
    positionModifiers={
      Object {
        "bottom": "pf-m-bottom",
        "bottom-end": "pf-m-bottom-right",
        "bottom-start": "pf-m-bottom-left",
        "left": "pf-m-left",
        "left-end": "pf-m-left-bottom",
        "left-start": "pf-m-left-top",
        "right": "pf-m-right",
        "right-end": "pf-m-right-bottom",
        "right-start": "pf-m-right-top",
        "top": "pf-m-top",
        "top-end": "pf-m-top-right",
        "top-start": "pf-m-top-left",
      }
    }
    trigger={
      <div>
        Toggle Popover
      </div>
    }
    zIndex={9999}
  />
</ContextProvider>
`;

exports[`popover renders close-button, header and body 1`] = `
<ContextProvider
  value={
    Object {
      "headerComponent": "h6",
    }
  }
>
  <Popper
    appendTo={[Function]}
    distance={25}
    enableFlip={true}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    isVisible={false}
    onDocumentClick={[Function]}
    onDocumentKeyDown={[Function]}
    onTriggerClick={[Function]}
    placement="top"
    popper={
      <FocusTrap
        active={false}
        aria-describedby="popover-test-body"
        aria-labelledby="popover-test-header"
        aria-modal="true"
        className="pf-c-popover"
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
            "fallbackFocus": [Function],
            "returnFocusOnDeactivate": true,
          }
        }
        onMouseDown={[Function]}
        paused={false}
        preventScrollOnDeactivate={true}
        role="dialog"
        style={
          Object {
            "maxWidth": null,
            "minWidth": null,
            "opacity": 0,
            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
          }
        }
      >
        <PopoverArrow />
        <PopoverContent>
          <PopoverCloseButton
            aria-label="Close"
            onClose={[Function]}
          />
          <PopoverHeader
            alertSeverityScreenReaderText="undefined alert:"
            icon={null}
            id="popover-test-header"
            titleHeadingLevel="h6"
          >
            <div>
              Popover Header
            </div>
          </PopoverHeader>
          <PopoverBody
            id="popover-test-body"
          >
            <div>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id feugiat augue, nec fringilla turpis.
            </div>
          </PopoverBody>
        </PopoverContent>
      </FocusTrap>
    }
    popperMatchesTriggerWidth={false}
    positionModifiers={
      Object {
        "bottom": "pf-m-bottom",
        "bottom-end": "pf-m-bottom-right",
        "bottom-start": "pf-m-bottom-left",
        "left": "pf-m-left",
        "left-end": "pf-m-left-bottom",
        "left-start": "pf-m-left-top",
        "right": "pf-m-right",
        "right-end": "pf-m-right-bottom",
        "right-start": "pf-m-right-top",
        "top": "pf-m-top",
        "top-end": "pf-m-top-right",
        "top-start": "pf-m-top-left",
      }
    }
    trigger={
      <div>
        Toggle Popover
      </div>
    }
    zIndex={9999}
  />
</ContextProvider>
`;
